--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,30 @@
     <string name="service_name">CardEmulation Sample</string>
     <string name="card_title">Sample Loyalty Card</string>
     <string name="account_number">Account Number</string>
+
+
+    <string name="action_settings">Settings</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="about_app">About App</string>
+    <string name="tag_erase_successful">Tag Erase Successfully</string>
+    <string name="tap_the_tag">Tap the Tag</string>
+    <string name="tag_copied_success">Tag Copied Successfully</string>
+    <string name="tap_th_tag_to_write">Tap the Tag to Write</string>
+    <string name="write1">Write</string>
+    <string name="type_here">Type Here</string>
+    <string name="tag_written_sucess">Tag Written Successfully</string>
+    <string name="data">Data:</string>
+    <string name="tag_type">Tag Type:</string>
+    <string name="is_tag_writable">Is Tag Writable? :</string>
+    <string name="tag_size">Tag Size:</string>
+    <string name="data_size">Data Size:</string>
+    <string name="dev">By SP Developer</string>
+    <string name="bug">For any Bug report:</string>
+    <string name="email">spdeveloper28@gmail.com</string>
+
+    <string name="Title">This app allows you to send a text message over NFC to another device</string>
+    <string name="textHint">Insert text to send</string>
+
+    <string name="aiddescription">aiddescription</string>
+    <string name="servicedesc">servicedesc</string>
 </resources>
